most of the website complete

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
-NODE_ENV = development
-PORT = 4000
+NODE_ENV=development
+PORT=4000
+MYSQL_HOST="database-1.c07jakyxudbp.us-east-1.rds.amazonaws.com"
+MYSQL_ADMIN="admin"
+MYSQL_PASSWORD="Trinity12"
+MYSQL_DB="ecom"
+
