--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/mylesknjenga/star_records_mern#readme",
   "dependencies": {
+    "@emailjs/browser": "^3.6.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "concurrently": "^7.2.2",
