--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@emailjs/browser": "^3.6.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "sweetalert": "^2.1.2"
   },
